# skaffold-example

./: Dockerfile  README.md  pyproject.toml  skaffold.yaml
helm-chart/: values.yaml
helm-chart/templates/: deployment.yaml  service.yaml
my-app/: app.py
