[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "A barebones webapp to demonstrate skaffold functionality"
authors = ["Matt Daily <mdaily@lco.global>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
